# GsplatLoc

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  environment.yml  pyproject.toml  res.json
.github/workflows/: main.yml  update-readme.yml
Datasets/Camera/: camera_config.yaml
docs/: arxiv.sty  bibliography.bib  citation_filter.py  iet-computer-vision.csl  main.md  main.tex  mess notes.md  res.json  table_filter.py  table_markdown.py  template.tex
docs/.obsidian/: app.json  appearance.json  community-plugins.json  core-plugins-migration.json  core-plugins.json  hotkeys.json  types.json  workspace.json
docs/.obsidian/plugins/editing-toolbar/: data.json
docs/.obsidian/plugins/obsidian-enhancing-export/: data.json  manifest.json
docs/.obsidian/plugins/obsidian-enhancing-export/lua/: markdown+hugo.lua  math_block.lua  polyfill.lua  url.lua
docs/.obsidian/plugins/obsidian-enhancing-export/textemplate/: dissertation.tex  neurips.sty  neurips.tex
docs/.obsidian/plugins/obsidian-excalidraw-plugin/: data.json  styles.css
docs/.obsidian/plugins/obsidian-git/: data.json
docs/.obsidian/plugins/obsidian-image-auto-upload-plugin/: data.json  main.js
docs/.obsidian/plugins/obsidian-image-toolkit/: main.js
docs/.obsidian/plugins/obsidian-importer/: main.js
docs/.obsidian/plugins/obsidian-latex-suite/: main.js
docs/.obsidian/plugins/obsidian-linter/: data.json
docs/.obsidian/plugins/obsidian-pandoc/: data.json
docs/.obsidian/plugins/obsidian-pandoc-reference-list/: data.json  main.js
docs/.obsidian/plugins/obsidian-zotero-desktop-connector/: data.json  main.js
docs/.obsidian/plugins/omnisearch/: data.json  main.js
docs/.obsidian/snippets/: page_width.css  pdf_dark_mode.css
docs/.pandoc/: zotero-library-1.json
scripts/: download_replica _full.sh  download_replica.sh  download_tum.sh  install_gicp.sh  install_gsplat.sh  pcd_vis.sh  pre-commit.sh  run_eval.sh  run_viewer.sh  sync_wandb_locally.sh
src/: GsplatLoc_eval.py  __init__.py  depth_loss_test.py  gicp_downsample.py  gicp_tensor.py  grip_downsample.py  grip_o3d_finished_experiments.json  gsplat_run.py  icps_eval.py  icps_test.py  main.py  pcd_vis.py  plot_rmse.py  res.json  rgb_filter.py  slam.py  utils.py
src/app/: __init__.py
src/component/: __init__.py  eval.py  tracker.py  visualize.py
src/data/: Image.py  __init__.py  base.py  dataset.py  normalize.py  pcd.py  utils.py
src/eval/: experiment.py  logger.py  utils.py
src/gicp/: depth_loss.py  factor.py  model.py  optimizer.py  pcd.py
src/gsplat_/: utils.py
src/gsplat_/datasets/: normalize.py
src/my_gsplat/: base.py  geometry.py  gs_trainer.py  gs_trainer_total.py  gs_trainer_total2.py  loss.py  model.py  simple_trainer.py  trainer.py  transform.py  utils.py  viewer.py
src/my_gsplat/datasets/: Image.py  base.py  dataset.py  normalize.py
src/my_gsplat/structure/: Image.py  camera.py  dataset.py
src/pose_estimation/: __init__.py  gemoetry.py  geometry.py  loss.py  model.py  train_eval.py
src/slam_data/: Image.py  __init__.py  dataset.py
tests/: conftest.py  example.py  kdtree_test.py  knn_test.py  lm_test.py  test_dataset.py  test_example.py  test_geometry.py  test_knn.py  test_normalize.py  utils.py
